--- a/UI/style.css
+++ b/UI/style.css
@@ -221,7 +221,7 @@ img{
   background-color: lightsteelblue;
   
 
-  height: 80vh;
+  height: 70vh;
   flex: 0.1;
   margin: 5px;
   position: relative;
@@ -282,9 +282,12 @@ img{
   width: 100%;
 }
 
+
+
 #code .code-done-by .model-container.show{
   pointer-events: auto;
   opacity: 1;
+  z-index: 1;
 }
 #code .code-done-by .model{
   background-color: #fff;
@@ -296,6 +299,7 @@ img{
   max-width: 100%;
 }
 #code .code-done-by .model .close{
+  margin-top: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -332,7 +336,7 @@ img{
   
   text-shadow: 0 1px;
   letter-spacing: 0.01em;
-  text-align: left;
+  text-align: justify;
   white-space: pre;
   word-spacing: normal;
   word-break: normal;
@@ -352,8 +356,9 @@ img{
   flex-direction: column;
   text-align: center;
   max-width: 100%;
+  height: 100vh;
   margin: 0 auto;
-  padding: 45px 0;
+  padding: 65px 0;
   background-color: grey;
 }
 #output .output-title{
@@ -372,14 +377,21 @@ img{
 #output img {
   vertical-align: middle;
   
+  
 }
-.container {
+.slide-container {
   position: relative;
+  width: 70vw;
+  left: 220px;
+  
+  
   
 
 }
 .mySlides {
   display: none;
+  
+  
  
 }
 
@@ -389,13 +401,13 @@ img{
 .prev,
 .next {
   cursor: pointer;
-  position: absolute;
  
-  top: 53%;
+ 
+  
   width: auto;
   padding: 16px;
   margin-top: -50px;
-  color: black;
+  color: white;
   font-weight: bold;
   font-size: 20px;
   border-radius: 0 3px 3px 0;
@@ -458,7 +470,7 @@ img{
   text-align: center;
   max-width: 1500px;
   margin: 0 auto;
-  padding: 45px 0;
+  padding: 70px 0;
 }
 #team .team-title{
   font-size: 4rem;
@@ -486,6 +498,12 @@ img{
   flex-wrap: wrap;
   width: 90vw;
 }
+.team-bottom .card-row{
+  width: 45vw;
+}
+.team-bottom-last .card-row{
+  width: 70vw;
+}
 .card-column {
   display: flex;
   align-items: center;
@@ -494,6 +512,10 @@ img{
   
   flex: 0.5;
   margin: 5px;
+}
+
+.team-bottom-last .card-column{
+  flex: 0.3;
 }
 
 
